--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Don't ignore Samples~ and Documentation~ folders despite tilde in them
+# which are commonly ignored in global ignore file.
+!/Samples~/
+!/Samples~/*
+!/Documentation~/
+!/Documentation~/*
+
+# Ignore Mac .DS_Store files
+.DS_Store
+
 # Mercurial version control data
 .hg*
 
