--- a/SaveState/Runevision.SaveState.asmdef
+++ b/SaveState/Runevision.SaveState.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "Runevision.WorldState",
+    "name": "Runevision.SaveState",
+    "rootNamespace": "",
     "references": [
         "GUID:af01629e909984b56b6ddac3cc8fe766",
         "GUID:bdf51211cba1541cca26870e4d9c763d"
